# AgenticOptionsReporter

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
agents/: backend.md  documentation.md  planner.md  testing.md
alembic/: env.py
alembic/versions/: 59ed11edc7f3_add_pipeline_warnings_to_agent_thesis.py  a7d2f4c9e1b0_add_catalyst_research_to_agent_thesis.py  b13c088bade6_initial_schema.py  c4e9a1f2d3b7_add_fundamentals_to_analysis_run.py  d8f3b2a1c9e4_add_trade_quality_score.py
docker/: Dockerfile
docs/: architecture.md  indicators.md  investment_thesis.md  option_analysis.md  workflow.md
specs/: agents.yaml  api.yaml  database.yaml  llm_providers.yaml  providers.yaml  scoring.yaml  workflow.yaml
src/agentic_options_reporter/: __init__.py  api_client.py  cli.py  config.py  logging_config.py  main.py  persistence.py  workflow.py
src/agentic_options_reporter/analysis/: composite_score.py  domain_scoring.py  indicators.py  options.py  risk.py  scoring.py  statistical_edge.py  support_resistance.py  trend.py  volume.py
src/agentic_options_reporter/data/: async_http.py  financial_provider.py  macro_provider.py  market_data.py  news_provider.py  provider_errors.py  provider_router.py  sec_provider.py
src/agentic_options_reporter/frontend/: app.py  formatting.py  report_pdf.py
src/agentic_options_reporter/models/: db.py  schemas.py
src/agentic_options_reporter/thesis/: agent_domain_score.py  catalyst_research.py  financial_research.py  investment_thesis.py  llm_client.py  macro_research.py  news_research.py  options_strategy.py  orchestrator.py  parsing.py  (+5 more)
tests/: conftest.py  test_api.py  test_api_client.py  test_cli.py  test_composite_score.py  test_domain_scoring.py  test_financial_provider.py  test_frontend_app.py  test_frontend_formatting.py  test_fundamentals.py  test_indicators.py  test_llm_client.py  test_logging_config.py  test_macro_provider.py  test_market_data.py  test_news_provider.py  test_options.py  test_persistence.py  test_provider_router.py  test_report_pdf.py  test_risk.py  test_scoring.py  test_sec_provider.py  test_statistical_edge.py  test_support_resistance.py  test_thesis_agents.py  test_thesis_orchestrator.py  test_thesis_parsing.py  test_thesis_streaming.py  test_trend.py  test_volume.py  test_workflow.py
(+35 files in other folders)
