[tool.poetry]
name = "agentic-options-reporter"
version = "0.1.0"
description = "Production-grade options analysis platform: data, indicators, option chain evaluation, risk, and scored recommendations."
authors = ["AgenticOptionsReporter Contributors"]
readme = "README.md"
packages = [{ include = "agentic_options_reporter", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.1"
ta = "^0.11.0"
yfinance = "^0.2.43"
plotly = "^5.24.0"
matplotlib = "^3.9.2"
uvicorn = { extras = ["standard"], version = "^0.30.6" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
