[tool.poetry]
name = "agentic-options-reporter"
version = "0.1.0"
description = "Production-grade options analysis platform: data, indicators, option chain evaluation, risk, and scored recommendations."
authors = ["AgenticOptionsReporter Contributors"]
readme = "README.md"
packages = [{ include = "agentic_options_reporter", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "^0.115.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.1"
ta = "^0.11.0"
yfinance = "^0.2.43"
plotly = "^5.24.0"
matplotlib = "^3.9.2"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
requests = "^2.32.3"
flet = "^0.28.3"
anthropic = "^0.116.0"
openai = "^2.0.0"
alembic = "^1.18.5"
google-genai = "^2.10.0"
httpx = "^0.28.1"
reportlab = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pypdf = "^6.14.2"

[tool.poetry.scripts]
agentic-options-reporter = "agentic_options_reporter.cli:main"
agentic-options-reporter-ui = "agentic_options_reporter.frontend.app:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
